examples/test_package/DoubleDC_Test/steps/benchrps__:precise.pl_run2/#test_analysis_3_result.txt
### **Evaluation Report: Rock-Paper-Scissors Game in ProbLog**

---

#### **1. Document Title**
**Analysis of ProbLog Code for Rock-Paper-Scissors Game**

---

#### **2. Background and Purpose**
The provided ProbLog code implements the rules of the rock-paper-scissors game and calculates the winner based on two players' move sequences. The purpose of this evaluation is to:
- Verify the correctness of the implementation.
- Analyze the test results and identify any failures.
- Ensure compliance with classical Prolog and ProbLog requirements.

---

#### **3. Test Results Summary**
The test query provided is:
```prolog
query(determine_winner([rock,rock,rock],[paper,paper,scissor],W)).
```

**Result:**
The test failed with the following error:
```
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for ''->'/2' at 41:77.
```

**Interpretation:**
The error indicates that the ProbLog engine could not find a valid clause for the `->/2` operator (implication) at line 41, column 77. This suggests a syntax or logical error in the `determine_winner` predicate.

---

#### **4. Failure Localization**
**Failed Query:**
```prolog
determine_winner([rock,rock,rock],[paper,paper,scissor],W).
```

**Error Location:**
- The error occurs in the `determine_winner` predicate, specifically in the line:
  ```prolog
  (Score > 0 -> Winner = 'Player 1'; Score < 0 -> Winner = 'Player 2'; Winner = 'Draw').
  ```
- The issue is related to the use of the `->/2` operator, which is not correctly interpreted by the ProbLog engine.

**Code Line:**
- The problematic line is the last line of the `determine_winner` predicate.

---

#### **5. Root Cause Analysis**
**Classical Prolog Context:**
- The logical structure of the `determine_winner` predicate is correct in classical Prolog. However, ProbLog has stricter requirements for syntax and operators.
- The `->/2` operator is not natively supported in ProbLog for conditional branching. Instead, ProbLog relies on probabilistic rules and facts.

**ProbLog Context:**
- The error arises because ProbLog does not recognize the `->/2` operator as a valid clause. ProbLog requires explicit probabilistic rules or facts for conditional logic.

**DeepProbLog:**
- The code does not use any DeepProbLog features (e.g., `nn/3`, `tensor/…`). Report: "DeepProbLog feature not used."

---

#### **6. Overall Analysis**
**Functional Requirements:**
- **Classical Reasoning:** Partially met. The logic for calculating game results (`result/3`, `play/3`, `compute_score/2`) is correct, but the `determine_winner` predicate fails due to syntax issues.
- **Probabilistic Reasoning:** Not applicable here, as the code does not use probabilistic facts or rules.
- **Neural Network Integration:** Not used.

**Edge Cases:**
- **Non-list Input:** The code does not handle non-list inputs gracefully.
- **Deep Recursive Performance:** The recursion in `play/3` and `compute_score/2` is well-defined and terminates correctly.
- **Undefined Predicates:** No undefined predicates are used.

---

#### **7. Error Summary**

| No. | Problem | Impact | Suggestion |
|-----|---------|--------|------------|
| 1   | `->/2` operator not supported in ProbLog | Predicate fails to execute | Replace `->/2` with ProbLog-compatible conditional logic (e.g., `if_then_else/3` or explicit rules). |
| 2   | No handling of non-list inputs | Potential runtime errors | Add input validation for `P1Moves` and `P2Moves`. |

---

### **Final Recommendations**
1. Replace the `->/2` operator in `determine_winner` with ProbLog-compatible logic.
2. Add input validation for `P1Moves` and `P2Moves` to handle non-list inputs.
3. Test the corrected code with the same query to verify the fix.

**Corrected `determine_winner` Predicate:**
```prolog
determine_winner(P1Moves, P2Moves, Winner) :-
    play(P1Moves, P2Moves, Results),
    compute_score(Results, Score),
    (Score > 0, Winner = 'Player 1';
     Score < 0, Winner = 'Player 2';
     Score =:= 0, Winner = 'Draw').
```

**Expected Output for Test Query:**
```prolog
query(determine_winner([rock,rock,rock],[paper,paper,scissor],W)).
% Expected result: W = 'Player 2'.
```

---

**Word Count:** ~450 words.